--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Video Chat roullette"
+      content="Rock Bit App Video Chat App"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
-    <title>Video Chat roullette</title>
+    <title>Rock Bit Web Video Chat App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
